# rocq-of-noir

./: README.md  rust-toolchain.toml
.github/workflows/: coq.yml  docs-pr.yml  reports.yml  rocq.yml  test-js-packages.yml
CoqOfNoir/: .gitignore  CoqOfNoir.v  coq-of-noir.opam
CoqOfNoir/base64/: monomorphic.v  monomorphized_program.json  polymorphic.v  run.v  simulation.v  translation.v
CoqOfNoir/proof/: CoqOfNoir.v
CoqOfNoir/simulation/: CoqOfNoir.v
RocqOfNoir/: RocqOfNoir.v  _CoqProject  blacklist.txt  rocq-of-noir.opam
RocqOfNoir/base64/: monomorphic.v  polymorphic.v  simulation.v
RocqOfNoir/keccak/: monomorphic.v  polymorphic.v  simulation.v
RocqOfNoir/proof/: RocqOfNoir.v
RocqOfNoir/simulation/: CoqOfNoir.v  RocqOfNoir.v
acvm-repo/acvm/: Cargo.toml
compiler/fm/src/: file_map.rs
compiler/noirc_arena/: Cargo.toml
compiler/noirc_arena/src/: lib.rs
compiler/noirc_driver/: Cargo.toml
compiler/noirc_driver/src/: lib.rs
compiler/noirc_errors/src/: debug_info.rs  position.rs
compiler/noirc_frontend/: Cargo.toml
compiler/noirc_frontend/src/: node_interner.rs
compiler/noirc_frontend/src/ast/: expression.rs  function.rs  mod.rs  statement.rs
compiler/noirc_frontend/src/graph/: mod.rs
compiler/noirc_frontend/src/hir_def/: expr.rs  function.rs  stmt.rs  traits.rs  types.rs
compiler/wasm/src/: compile.rs  compile_new.rs
coq/: CoqOfNoir.v  _CoqProject  base64.v
noir_stdlib/: monomorphized_program.json
scripts/: coq_of_noir.py  rocq_of_noir.py
tooling/debugger/src/: context.rs
tooling/lsp/src/: lib.rs
tooling/nargo/src/: lib.rs
(+28 files in other folders)
