opam-version: "2.0"
name: "rocq-of-noir"
version: "0.1"
synopsis: "Rocq of Noir"
description: """
Formal verification for Noir by translation to the proof system Rocq
"""
maintainer: "Guillaume Claret <dev@clarus.me>"
authors: [
  "Formal Land <contact@formal.land>"
]
license: "MIT and APACHE-2.0"
homepage: "https://github.com/formal-land/rocq-of-noir"
bug-reports: "https://github.com/formal-land/rocq-of-noir/issues"
dev-repo: "git+https://github.com/formal-land/rocq-of-noir.git"
depends: [
  "ocaml" {>= "4.08"}
  "coq" {>= "8.20.0" & < "8.21"}
  "coq-hammer"
  "coq-coqutil" {>= "0.0.5"}
]
build: [
  [make]
]
